<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InputActivity">

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/textViewInputTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/textViewInputTitle"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/editTextName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/editTextName"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/editTextPassword"
                android:inputType="text" />

            <EditText
                android:id="@+id/editTextMail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/editTextMail"
                android:inputType="textPersonName" />

            <Button
                android:id="@+id/buttonInputSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/buttonInputSave" />

            <TextView
                android:id="@+id/textViewInputResult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>