<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/textView1Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/textView1Title"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button1Input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button1Input" />

            <Button
                android:id="@+id/button1Get"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button1Get" />
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>